fixed spacing with `useParallax` hook

--- a/website/private/structure/HomePinned.module.css
+++ b/website/private/structure/HomePinned.module.css
@@ -1,4 +1,8 @@
-.Pair {
+.HomePinned {
+  flex-direction: column;
+}
+
+.HomePinned .Pair {
   grid-column: span 2;
 
   display: grid;
